--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/codes/default.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/codes/default.html
@@ -4,21 +4,23 @@
         <div class="querySuite-filter">
             <table>
                 <tr>
-{filter}
+                    {filter}
                 </tr>
             </table>
         </div>
         <!-- 按钮 查询 导入 -->
         <div class="querySuite-button">
-            <button class="btn btn-default" action="query">
-                <span class="glyphicon glyphicon-search"></span> 查询
-            </button>
-            <button class="btn btn-default" action="add" action-modal="myModal">
-                <span class="glyphicon glyphicon-plus-sign"></span> 添加
-            </button>
-            <button class="btn btn-danger" action="delete">
-                <span class="glyphicon glyphicon-trash"></span> 删除
-            </button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default" action="query">
+                    <i class="fas fa-search"></i> 查询
+                </button>
+                <button type="button" class="btn btn-default" action="add" action-modal="formSuiteOne">
+                    <i class="fas fa-plus"></i> 添加
+                </button>
+                <button type="button" class="btn btn-default" action="delete">
+                    <i class="fas fa-trash-alt"></i> 删除
+                </button>
+            </div>
         </div>
         <!-- 列表-->
         <div class="querySuite-table"
@@ -39,7 +41,7 @@
     </div>
 </div>
 <!-- 模态框（Modal）编辑数据字典信息 -->
-<div id="formSuite" class="modal fade formSuite-wrapper" role="dialog" aria-hidden="true">
+<div id="formSuiteOne" class="modal fade formSuite-wrapper" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
@@ -53,10 +55,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" action="save">
-                    <span class="glyphicon glyphicon-saved"></span> 保存
+                    <i class="fas fa-vote-yea"></i> 保存
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">
-                    <span class="glyphicon glyphicon-remove"></span> 关闭
+                    <i class="fas fa-times"></i> 关闭
                 </button>
             </div>
         </div><!-- /.modal-content -->
@@ -68,7 +70,7 @@
         var querySuite = $("#querySuite").querySuite().query();
 
         //表单套件初始化
-        var formSuite = $("#formSuite").formSuite()
+        var formSuite = $("#formSuiteOne").formSuite()
             .add(function () {
             })
             .edit(function () {
