--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <!--基础引用-->
     <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../../lib/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="../../lib/jquery-ui/themes/start/jquery-ui.min.css" rel="stylesheet" />
     <!--组件引用-->
     <link href="../../lib/admin-lte/css/AdminLTE.min.css" rel="stylesheet" />
@@ -35,6 +35,7 @@
 
     <!--基础引用-->
     <script src="../../lib/jquery/jquery.min.js"></script>
+    <script src="../../js/lib/popper.min.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../lib/jquery-ui/jquery-ui.min.js"></script>
     <!--组件引用-->
