--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
@@ -3,14 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>用户登录</title>
-    <meta name="keywords" content="NET Core，BitAdminCore,管理框架,后端框架,后台框架" />
-    <meta name="description" content="BitAdminCore后台管理框架" />
+    <meta name="description" content="后台管理框架" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!--基础引用-->
     <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../../lib/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
     <!--框架引用-->
     <link href="../../lib/admin-lte/css/AdminLTE.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../css/framework/BitAdmin.css" />
@@ -23,7 +22,6 @@
             -webkit-filter: grayscale(100%);
             -moz-filter: grayscale(100%);
             -ms-filter: grayscale(100%);
-            -o-filter: grayscale(100%);
             filter: grayscale(100%);
             filter: gray;
         }
@@ -37,53 +35,73 @@
         <!-- /.login-logo -->
         <div class="login-box-body">
             <h3 class="login-box-msg">用户登录</h3>
-            <ul class="nav nav-tabs nav-justified">
-                <li role="presentation" class="active"><a href="#t1" data-toggle="tab">账号密码</a></li>
-                <li role="presentation"><a href="#t2" data-toggle="tab">手机验证</a></li>
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#t1">账号密码</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#t2">手机验证</a>
+                </li>
             </ul>
             <div class="tab-content" style="padding-top:15px;">
-                <div id="t1" class="tab-pane fade in active">
-                    <div class="form-group has-feedback">
-                        <input type="text" id="txtUserCode1" class="form-control" placeholder="帐号/手机/邮箱" value="admin">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                    </div>
-                    <div class="form-group has-feedback">
-                        <input type="password" id="txtPassword" class="form-control" placeholder="密码" value="123456">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-xs-4" style="padding-left: 15px;">
-                            <input type="text" id="verifyCode" class="form-control" placeholder="验证码">
+                <div id="t1" class="tab-pane active">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <div class="col-xs-4" style="padding-left: 15px;" id="divImg">
+                        <input type="text" id="txtUserCode1" class="form-control" placeholder="帐号/手机/邮箱" value="admin">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                        </div>
+                        <input type="password" id="txtPassword" class="form-control" placeholder="密码" value="123456">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="col-xs-4" style="padding-left:0px;">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="far fa-keyboard"></i></span>
+                                </div>
+                                <input type="text" id="verifyCode" class="form-control" placeholder="验证码" style="width:150px;">
+                            </div>
+                        </div>
+                        <div class="col-xs-4" id="divImg">
                             <img id="verifyCodeImage" src="../../account/verifycode" style="cursor:pointer;" title="点击刷新" />
                         </div>
-                        <div class="col-xs-4" style="padding-right: 15px;">
-                            <button type="button" id="btnLogin" class="btn btn-primary btn-block ">登录</button>
-                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="button" id="btnLogin" class="btn btn-primary btn-block ">登录</button>
                     </div>
                 </div>
                 <div id="t2" class="tab-pane fade">
-                    <div class="form-group has-feedback">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
                         <input type="text" id="txtUserCode2" class="form-control" placeholder="帐号/手机" value="admin">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
                     </div>
-                    <div class="form-group row">
-                        <div class="col-xs-6" style="padding-left: 15px;">
-                            <input type="text" id="smsCode" class="form-control" placeholder="验证码">
-                            <input type="hidden" id="smsSign" />
+                    <div class="input-group mb-3">
+                        <div class="col-xs-4" style="padding-left:0px;">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="far fa-keyboard"></i></span>
+                                </div>
+                                <input type="text" id="smsCode" class="form-control" placeholder="验证码" style="width:146px;">
+                                <input type="hidden" id="smsSign" />
+                            </div>
                         </div>
-                        <div class="col-xs-6" style="padding-right: 15px;">
-                            <button type="button" id="smsSend" class="btn btn-primary btn-block ">发送验证短信</button>
+                        <div class="col-xs-4">
+                            <button type="button" id="smsSend" class="btn btn-primary">发送验证短信</button>
                         </div>
                     </div>
-                    <div class="form-group has-feedback">
+                    <div class="form-group">
                         <button type="button" id="smsLogin" class="btn btn-primary btn-block " disabled>短信验证登录</button>
                     </div>
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="form-group has-feedback">
+            <div class="form-group">
                 <span id="spanmsg" style="color:red;"></span>
             </div>
             <div class="row" style="padding-left:15px;padding-top:5px;">
