--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/userpicker.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/userpicker.html
@@ -1,79 +1,87 @@
 ﻿<!--BitAdmin2.0框架文件-->
 <link href="../../lib/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
 <style type="text/css">
-    .modal .panel-body {
+    .modal .card-body {
         padding: 0;
     }
 </style>
 
-<div class="modal fade" id="UserSelection" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true" style="top: 30px">
-    <div class="modal-dialog" style="width:870px;overflow-y:auto;">
-        <div class="modal-content" style="width:850px">
-            <div class="panel panel-default" style="margin-bottom:0; width:850px">
-                <div class="panel-heading">
-                    人员选择
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
+<div class="modal fade" id="UserSelection">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4>人员选择</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row" style="padding-bottom:5px;">
+                    <table>
+                        <tr>
+                            <td class="SearchName" style="width: 60px; text-align: right">姓名：</td>
+                            <td style="width: 180px">
+                                <input type="text" class="form-control" id="UserPickeUserName" />
+                            </td>
+                            <td>
+                                <button class="btn btn-default navbar-btn" id="btnQuery">
+                                    <span class="glyphicon glyphicon-search"></span> 查询
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="panel-body">
-                    <div role="search">
-                        <table>
-                            <tr>
-                                <td class="SearchName" style="width: 60px; text-align: right">姓名：</td>
-                                <td style="width: 180px">
-                                    <input type="text" class="form-control" id="UserPickeUserName" />
-                                </td>
-                                <td>
-                                    <button class="btn btn-default navbar-btn" id="btnQuery">
-                                        <span class="glyphicon glyphicon-search"></span> 查询
-                                    </button>
-                                </td>
-                            </tr>
-                        </table>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-header">
+                                组织架构
+                            </div>
+                            <div class="card-body" style="height:350px">
+                                <div id="departmentTree" data-url="../../picker/GetDepData" data-text="departmentName"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-header">
+                                未选择人员
+                            </div>
+                            <div class="card-body" style="height:350px">
+                                <select name="from" id="UserSelect" class="form-control" style="height:100%" multiple="multiple"></select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-header">&nbsp;</div>
+                            <div class="card-body" style="height:350px;padding:10px;">
+                                <button type="button" id="UserSelect_RightAll" class="btn btn-block"><i class="fas fa-angle-double-right"></i></button>
+                                <button type="button" id="UserSelect_RightSelected" class="btn btn-block"><i class="fas fa-angle-right"></i></button>
+                                <button type="button" id="UserSelect_LeftSelected" class="btn btn-block"><i class="fas fa-angle-left"></i></button>
+                                <button type="button" id="UserSelect_LeftAll" class="btn btn-block"><i class="fas fa-angle-double-left"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-header">
+                                已选择人员
+                            </div>
+                            <div class="card-body" style="height:350px">
+                                <select name="to" id="UserSelected" class="form-control" style="height:100%" multiple="multiple"></select>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default" style="width:250px; float:left">
-                <div class="panel-heading">
-                    组织架构导航
-                </div>
-                <div class="panel-body" style="height:400px">
-                    <div id="departmentTree" data-url="../../picker/GetDepData" data-text="departmentName"></div>
-                </div>
-            </div>
-            <div class="panel panel-default" style="width:250px; float:left">
-                <div class="panel-heading">
-                    未选择人员
-                </div>
-                <div class="panel-body" style="height:400px">
-                    <select name="from" id="UserSelect" class="form-control" style="height:100%" multiple="multiple"></select>
-                </div>
-            </div>
-            <div class="panel panel-default" style="width:100px; float:left">
-                <div class="panel-heading" style=" height:41px">
-                </div>
-                <div class="panel-body" style="height:400px;padding:40px 15px;">
-                    <button type="button" id="UserSelect_RightAll" class="btn btn-block"><i class="glyphicon glyphicon-forward"></i></button>
-                    <button type="button" id="UserSelect_RightSelected" class="btn btn-block"><i class="glyphicon glyphicon-chevron-right"></i></button>
-                    <button type="button" id="UserSelect_LeftSelected" class="btn btn-block"><i class="glyphicon glyphicon-chevron-left"></i></button>
-                    <button type="button" id="UserSelect_LeftAll" class="btn btn-block"><i class="glyphicon glyphicon-backward"></i></button>
-                </div>
-            </div>
-            <div class="panel panel-default" style="width:250px; float:left">
-                <div class="panel-heading">
-                    已选择人员
-                </div>
-                <div class="panel-body" style="height:400px">
-                    <select name="to" id="UserSelected" class="form-control" style="height:100%" multiple="multiple"></select>
-                </div>
-            </div>
-            <div class="modal-footer" style=" padding:0 15px 15px 0">
-                <button type="button" class="btn btn-primary" id="btnSave">
-                    <span class="glyphicon glyphicon-saved"></span> 确定
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" action="save">
+                    <i class="fas fa-vote-yea"></i> 确定
                 </button>
-                <button type="button" id="close_module" class="btn btn-default" data-dismiss="modal">
-                    <span class="glyphicon glyphicon-remove"></span> 关闭
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    <i class="fas fa-times"></i> 关闭
                 </button>
             </div>
         </div><!-- /.modal-content -->
@@ -83,103 +91,88 @@
 <script src="../../js/lib/multiselect.min.js"></script>
 <script src="../../lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
-    $("#UserSelection").modal('hide');//防止重复点击
-    $("#UserSelection").modal('show');
-    var param = JSON.parse($("#UserSelection").parent().attr("data-param"));
-    var valueInput = param.value;
-    var textInput = param.text;
-    var single = param.single;
+    $(function () {
+        var modal = $("#UserSelection").pickerModal()
+            .save(function () {
+                var val = "";
+                var text = "";
+                $.each($("#UserSelected").find('option'), function (i, d) {
+                    if (val != "") {
+                        val += ",";
+                        text += ",";
+                    }
+                    text += $(this).text();
+                    val += $(this).val();
+                });
+                return { text: text, value: val };
+            });
 
-    $('#UserSelect').multiselect({
-        single: single,
-        right: "#UserSelected",
-        leftAll: "#UserSelect_LeftAll",
-        rightAll: "#UserSelect_RightAll",
-        leftSelected: "#UserSelect_LeftSelected",
-        rightSelected: "#UserSelect_RightSelected"
-    });
-
-    //确定
-    $("#UserSelection #btnSave").click(function () {
-        var val = "";
-        var text = "";
-        $.each($("#UserSelected").find('option'), function (i, d) {
-            if (val != "") {
-                val += ",";
-                text += ",";
-            }
-            text += $(this).text();
-            val += $(this).val();
+        $('#UserSelect').multiselect({
+            single: modal.single,
+            right: "#UserSelected",
+            leftAll: "#UserSelect_LeftAll",
+            rightAll: "#UserSelect_RightAll",
+            leftSelected: "#UserSelect_LeftSelected",
+            rightSelected: "#UserSelect_RightSelected"
         });
 
-        $(valueInput).val(val);
-        $(textInput).val(text);
-        $(textInput).change();
-        if (param.callback != undefined)
-            eval(param.callback + "()");
+        //查询
+        $("#UserSelection #btnQuery").click(function () {
+            departmentTree.load();
+        });
 
-        $("#UserSelection").modal('hide');
+        //加载部门
+        var departmentTree = $("#departmentTree").bitTree()
+            .load(function (result) {
+                if (result.data && result.data.length > 0) {
+                    $('#departmentTree > ul >li:eq(0)').click();
+                }
+            })
+            .select(function (event, node) {
+                $("#UserPickeUserName").val();
+                bindUserInfo(node.departmentId);
+            })
+            .load();
 
-    });
+        //选择部门加载用户信息
+        function bindUserInfo(departmentId) {
+            $("#UserSelect").find("option").remove();
+            $.ajax({
+                url: '../../picker/GetUserData',
+                type: 'post',
+                cache: false,
+                async: true,
+                data: {
+                    userType: $("#picker_UserType").val(),
+                    departmentId: departmentId,
+                    userName: $("#UserPickeUserName").val()
+                },
+                success: function (result) {
+                    $.each(result.data, function (i, d) {
+                        var isBool = true;
+                        $.each($("#UserSelected option"), function () {
+                            if ($(this).val() == d.userId)
+                                isBool = false;
+                        });
+                        if (isBool)
+                            $("#UserSelect").append('<option value="' + d.userId + '">' + d.userName + '</option>');
+                    });
+                }
+            });
+        }
 
-    //查询
-    $("#UserSelection #btnQuery").click(function () {
-        departmentTree.load();
-    });
-
-    //加载部门
-    var departmentTree = $("#departmentTree").bitTree()
-        .load(function (result) {
-            if (result.data && result.data.length > 0) {
-                $('#departmentTree > ul >li:eq(0)').click();
-            }
-        })
-        .select(function (event, node) {
-            $("#UserPickeUserName").val();
-            bindUserInfo(node.departmentId);
-        })
-        .load();
-
-    //选择部门加载用户信息
-    function bindUserInfo(departmentId) {
-        $("#UserSelect").find("option").remove();
+        //加载已选的用户
         $.ajax({
-            url: '../../picker/GetUserData',
+            url: '../../picker/GetSelectUserData',
             type: 'post',
             cache: false,
             async: true,
-            data: {
-                userType: $("#picker_UserType").val(),
-                departmentId: departmentId,
-                userName: $("#UserPickeUserName").val()
-            },
+            data: { userId: $(modal.value).val() },
             success: function (result) {
                 $.each(result.data, function (i, d) {
-                    var isBool = true;
-                    $.each($("#UserSelected option"), function () {
-                        if ($(this).val() == d.userId)
-                            isBool = false;
-                    });
-                    if (isBool)
-                        $("#UserSelect").append('<option value="' + d.userId + '">' + d.userName + '</option>');
+                    $("#UserSelected").append('<option value="' + d.userId + '">' + d.userName + '</option>');
                 });
             }
         });
-    }
-
-    //加载已选的用户
-    $.ajax({
-        url: '../../picker/GetSelectUserData',
-        type: 'post',
-        cache: false,
-        async: true,
-        data: { userId: $(valueInput).val() },
-        success: function (result) {
-            $.each(result.data, function (i, d) {
-                $("#UserSelected").append('<option value="' + d.userId + '">' + d.userName + '</option>');
-            });
-        }
     });
-
-
 </script>
