--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/department.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/department.html
@@ -1,66 +1,63 @@
 ﻿<!--BitAdmin2.0框架文件-->
 <link href="../../lib/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
 
-<div class="row">
-    <div class="col-md-4">
-        <div class="box">
-            <div class="box-body querySuite-wrapper">
-                <div class="panel-heading">
-                    组织架构导航
-                </div>
-                <div id="DPTree" data-url="../../system/GetDepartmentTree" data-text="departmentName"></div>
-            </div>
+<div class="row box">
+    <div class="col-md-3">
+        <div class="card querySuite-wrapper">
+            <div class="card-header">组织架构</div>
+            <div id="DPTree" data-url="../../system/GetDepartmentTree" data-text="departmentName"></div>
         </div>
     </div>
-    <div class="col-md-8">
-        <div class="box">
-            <div id="querySuite" class="box-body querySuite-wrapper">
-                <!-- 条件搜索 -->
-                <div class="querySuite-filter">
-                    <table>
-                        <tr>
-                            <th>部门编号:</th>
-                            <td><input type="text" name="departmentCode" class="form-control" /></td>
-                            <th>部门名称：</th>
-                            <td>
-                                <input type="text" name="departmentName" class="form-control" />
-                                <!--隐藏主键--><input type="hidden" id="parentId" name="parentId" />
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <!-- 按钮 查询 导入 -->
-                <div class="querySuite-button">
-                    <button class="btn btn-default" action="query">
-                        <span class="glyphicon glyphicon-search"></span> 查询
-                    </button>
-                    <button class="btn btn-default" action="add" action-modal="formSuiteModal">
-                        <span class="glyphicon glyphicon-plus-sign"></span> 添加
-                    </button>
-                    <button class="btn btn-danger" action="delete">
-                        <span class="glyphicon glyphicon-trash"></span> 删除
-                    </button>
-                </div>
-                <!-- 列表-->
-                <div class="querySuite-table"
-                     data-key="departmentId"
-                     data-query-url="../../system/QueryDepartmentData"
-                     data-delete-url="../../system/DeleteDepartment">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th style="width:30px;"><input type="checkbox" /></th>
-                                <th data-field="departmentCode" data-format="edit">部门编号</th>
-                                <th data-field="departmentName">部门名称</th>
-                                <th data-field="departmentFullName">部门全称</th>
-                                <th data-field="createTime" data-format="time">创建时间</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-                <!-- 分页 -->
-                <div class="querySuite-paging" data-page-size="10"></div>
+    <div class="col-md-9">
+        <div id="querySuite" class="box-body querySuite-wrapper">
+            <!-- 条件搜索 -->
+            <div class="querySuite-filter">
+                <table>
+                    <tr>
+                        <th>部门编号:</th>
+                        <td><input type="text" name="departmentCode" class="form-control" /></td>
+                        <th>部门名称：</th>
+                        <td>
+                            <input type="text" name="departmentName" class="form-control" />
+                            <!--隐藏主键--><input type="hidden" id="parentId" name="parentId" />
+                        </td>
+                    </tr>
+                </table>
             </div>
+            <!-- 按钮 查询 导入 -->
+            <div class="querySuite-button">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default" action="query">
+                        <i class="fas fa-search"></i> 查询
+                    </button>
+                    <button type="button" class="btn btn-default" action="add" action-modal="formSuiteModal">
+                        <i class="fas fa-plus"></i> 添加
+                    </button>
+                    <button type="button" class="btn btn-default" action="delete">
+                        <i class="fas fa-trash-alt"></i> 删除
+                    </button>
+                </div>
+            </div>
+            <!-- 列表-->
+            <div class="querySuite-table"
+                 data-key="departmentId"
+                 data-query-url="../../system/QueryDepartmentData"
+                 data-delete-url="../../system/DeleteDepartmentData"
+                 data-sort-url="../../system/SortDepartmentData">
+                <table>
+                    <thead>
+                        <tr>
+                            <th style="width:30px;"><input type="checkbox" /></th>
+                            <th data-field="departmentCode" data-format="edit">部门编号</th>
+                            <th data-field="departmentName">部门名称</th>
+                            <th data-field="departmentFullName">部门全称</th>
+                            <th data-field="createTime" data-format="time">创建时间</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <!-- 分页 -->
+            <div class="querySuite-paging" data-page-size="10"></div>
         </div>
     </div>
 </div>
@@ -93,10 +90,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="btnSave" action="save">
-                    <span class="glyphicon glyphicon-saved"></span> 保存
+                    <i class="fas fa-vote-yea"></i> 保存
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">
-                    <span class="glyphicon glyphicon-remove"></span> 关闭
+                    <i class="fas fa-times"></i> 关闭
                 </button>
             </div>
         </div><!-- /.modal-content -->
