--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/role.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/role.html
@@ -4,16 +4,18 @@
         <div class="box">
             <div class="box-body querySuite-wrapper">
                 <!-- 按钮 -->
-                <div class="querySuite-button container-fluid">
-                    <button class="btn btn-default" action="add" action-modal="AddRole">
-                        <span class="glyphicon glyphicon-plus-sign"></span> 添加
-                    </button>
-                    <button class="btn btn-default" action="add" id="btnRoleUpdate">
-                        <span class="glyphicon glyphicon-list-alt"></span> 修改
-                    </button>
-                    <button class="btn btn-danger" action="delete" id="btnRoleDel">
-                        <span class="glyphicon glyphicon-trash"></span> 删除
-                    </button>
+                <div class="querySuite-button">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default" action="add" action-modal="AddRole">
+                            <i class="fas fa-plus"></i> 添加
+                        </button>
+                        <button type="button" class="btn btn-default" action="add" id="btnRoleUpdate">
+                            <i class="fas fa-file-alt"></i> 修改
+                        </button>
+                        <button type="button" class="btn btn-default" action="delete" id="btnRoleDel">
+                            <i class="fas fa-trash-alt"></i> 删除
+                        </button>
+                    </div>
                 </div>
 
                 <ul class="list-group" id="roleList" style="min-height: 250px; overflow: auto;width:100%;margin-top:10px;"></ul>
@@ -40,19 +42,18 @@
                 </div>
                 <!-- 按钮 查询 导入 -->
                 <div class="querySuite-button">
-                    <button class="btn btn-default" action="query">
-                        <span class="glyphicon glyphicon-search"></span>
-                        查询
-                    </button>
-                    <button class="btn btn-default" action="add" id="btnAddUser">
-                        <span class="glyphicon glyphicon-user"></span>
-                        设置角色人员
-                    </button>
-                    <input type="hidden" id="UserInfo" />
-                    <button class="btn btn-default" action="add" id="btnAddRole">
-                        <span class="glyphicon glyphicon-cog"></span>
-                        设置角色权限
-                    </button>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default" action="query">
+                            <i class="fas fa-search"></i> 查询
+                        </button>
+                        <button type="button" class="btn btn-default" action="add" id="btnAddUser">
+                            <i class="fas fa-users-cog"></i> 设置角色人员
+                        </button>
+                        <input type="hidden" id="UserInfo" />
+                        <button type="button" class="btn btn-default" action="add" id="btnAddRole">
+                            <i class="fas fa-cog"></i> 设置角色权限
+                        </button>
+                    </div>
                 </div>
                 <!-- 列表-->
                 <div class="querySuite-table"
@@ -96,12 +97,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" action="save">
-                    <span class="glyphicon glyphicon-saved"></span>
-                    保存
+                    <i class="fas fa-vote-yea"></i> 保存
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">
-                    <span class="glyphicon glyphicon-remove"></span>
-                    关闭
+                    <i class="fas fa-times"></i> 关闭
                 </button>
             </div>
         </div><!-- /.modal-content -->
@@ -134,10 +133,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="btnSave" action="save">
-                    <span class="glyphicon glyphicon-saved"></span> 保存
+                    <i class="fas fa-vote-yea"></i> 保存
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">
-                    <span class="glyphicon glyphicon-remove"></span> 关闭
+                    <i class="fas fa-times"></i> 关闭
                 </button>
             </div>
         </div><!-- /.modal-content -->
