--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
@@ -3,9 +3,9 @@
 <div class="box">
     <div class="box-body querySuite-wrapper">
         <!-- 按钮 查询 导入 -->
-        <div class="querySuite-button container-fluid navbar-right">
+        <div class="querySuite-button container-fluid text-right">
             <button class="btn btn-default" action="back" onclick="javascript:history.back(-1);">
-                <span class="glyphicon glyphicon-back"></span> 返回
+                <i class="fas fa-arrow-circle-left"></i> 返回
             </button>
         </div>
         <!-- 列表-->
