--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/toread.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/toread.html
@@ -23,9 +23,11 @@
         </div>
         <!-- 按钮 查询 导入 -->
         <div class="querySuite-button">
-            <button class="btn btn-default" action="query">
-                <span class="glyphicon glyphicon-search"></span> 查询
-            </button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default" action="query">
+                    <i class="fas fa-search"></i> 查询
+                </button>
+            </div>
         </div>
         <!-- 列表-->
         <div class="querySuite-table"
