--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/bind.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/bind.html
@@ -25,24 +25,24 @@
         <!-- /.login-logo -->
         <div class="login-box-body">
             <h3 class="login-box-msg">绑定账号</h3>
-            <div class="form-group has-feedback">
-                <input type="text" id="txtUserCode" class="form-control" placeholder="帐号/手机/邮箱" value="">
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+                <input type="text" id="txtUserCode" class="form-control" placeholder="帐号/手机/邮箱" value="admin">
             </div>
-            <div class="form-group has-feedback">
-                <input type="password" id="txtPassword" class="form-control" placeholder="密码" value="">
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                </div>
+                <input type="password" id="txtPassword" class="form-control" placeholder="密码" value="123456">
             </div>
-            <div class="form-group has-feedback">
+            <div class="form-group">
                 <span id="spanmsg" style="color:red;"></span>
             </div>
-            <div class="row">
-                <div class="col-xs-8" style="padding-left: 15px;"></div>
-                <!-- /.col -->
-                <div class="col-xs-4" style="padding-right: 15px;">
-                    <button type="button" id="btnLogin" class="btn btn-primary btn-block ">登录</button>
-                </div>
-                <!-- /.col -->
+
+            <div class="form-group">
+                <button type="button" id="btnLogin" class="btn btn-primary btn-block ">登录</button>
             </div>
         </div>
         <!-- /.login-box-body -->
